css fixes body added "ng-cloak" to prevent flickering

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -96,11 +96,12 @@ div.toolbox {
     padding: 10px;
     line-height:14px;
     font-size:14px;
+    z-index: 5;
     margin: 0;
     text-align: right;
     background: #C2D8FF;
     border-bottom: 1px solid hsl(0,0%,60%);
-    box-shadow: 0px 2px 5px #ccc;
+    box-shadow: 3px 7px 20px #777;
 }
 
 div.toolbox span {
@@ -193,9 +194,9 @@ aside ul li a:first-child {
     border-top: none;
 }
 
-aside ul li:hover {
+aside ul li a:hover {
     background: darkseagreen;
-    box-shadow: 5px 5px 20px #555 inset;
+    box-shadow: 0px 1px 8px #555 inset;
     color: #fff;
     text-shadow: 1px 1px 5px #555;
 }
@@ -254,12 +255,16 @@ div.main header a .update {
     text-decoration: none;
 }
 
+div.main header a .settings:hover,
+div.main header a .update:hover {
+    color:#000;
+}
+
 div.main img.gravatar {
     position: absolute;
     float: left;
     top: 10px;
-    right: 80px;
-    border: 1px solid #999;
+    right: 82px;
     padding: 0px;
     border-radius: 3px;
     background: #f2f2f2;
@@ -313,7 +318,7 @@ cursor: pointer;
     font-size: 20px;
     position: relative;
     top: 0px;
-    border-left: 1px solid #CCC;
+    border-left: 1px solid #999;
     height: 22px;
     right: -10px;
     width: 38px;
@@ -323,7 +328,6 @@ cursor: pointer;
     color: #555;
 }
 .the-gist-name a:hover {
-    box-shadow: 0px 0px 10px #555 inset;
     color:#000;
 }
 
@@ -466,4 +470,8 @@ top: 4px;
 
 .the-gist-name {
     overflow: auto;
+}
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none;
 }
